Design Changed(ヘッダー、ヘルプページ、newページ、styliststartページ)

--- a/app/views/shared/_header.en.html.erb
+++ b/app/views/shared/_header.en.html.erb
@@ -58,7 +58,7 @@
   <!-- アイコン -->
             <a href="#paradeiser-more" id="paradeiser-dropdown">
 
-                <i class="align justify icon"></i>MENU
+                MENU
             </a>
   <!-- 開いた後の中身 -->
             <ul class="paradeiser_children" id="paradeiser-more">
