--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,4 +1,85 @@
 <h1>FAQ</h1>
+<!-- Introduce steps -->
+<div class="ui vertical stripe intro segment">
+
+
+<!-- For STYLED -->
+
+  <div class="ui stackable very relaxed center aligned grid container">
+      <div class="twelve wide column">
+        <h1 class="ui header">STYLED </h1>
+        <p><b>Get</b> Styling!   <em>STYLED</em></p>
+      </div>
+  </div>
+      <div class="ui ordered steps">
+
+        <div class="step">
+          <i class="yellow user icon"></i>
+          <div class="content">
+            <div class="title">Make account</div>
+            <div class="description">Choose your shipping options</div>
+          </div>
+        </div>
+        <div class="step">
+          <i class="share icon"></i>
+          <div class="content">
+            <div class="title">Post</div>
+            <div class="description">for asking new style.</div>
+          </div>
+        </div>
+        <div class="step">
+          <i class="idea icon"></i>
+          <div class="content">
+            <div class="title">Wait</div>
+            <div class="description">until new stylings arrive.</div>
+          </div>
+        </div>
+
+      </div>
+
+
+<!--For  STYLIST -->
+  <div class="ui stackable very relaxed center aligned grid container">
+      <div class="twelve wide column">
+        <h1 class="ui header">STYLING</h1>
+        <p><b>Give</b> Styling!    <em>STYLING</em></p>
+      </div>
+  </div>
+
+      <div class="ui ordered steps">
+        <div class="step">
+          <i class="yellow user icon"></i>
+          <div class="content">
+            <div class="title">Make account</div>
+            <div class="description">Choose your shipping options</div>
+          </div>
+        </div>
+        <div class="step">
+          <i class="users icon"></i>
+          <div class="content">
+            <div class="title">Find users</div>
+            <div class="description">who're waiting styling </div>
+          </div>
+        </div>
+        <div class="link step">
+          <i class="star icon"></i>
+          <div class="content">
+            <div class="title">Suppose</div>
+            <div class="description">styling and get stars.</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="twelve wide column">
+        <p>Semantic is <b>designed completely with em</b> making responsive sizing a breeze. Design <em>variations</em> built i  <%= link_to "Need Help?", help_path %> allow.</p>
+      </div>
+
+
+
+
+</div>
+
+<h1>For Free, you can get advices from cool friends all over world.</h1>
 
 <!-- ５ 必ずulは入れること（custom.cssにて操作）-->
 <div class="acodmenu">
