--- a/app/views/static_pages/styliststart.html.erb
+++ b/app/views/static_pages/styliststart.html.erb
@@ -1,46 +1,135 @@
-<!-- semanticUIのトップページのヘッダー真似したがうまく動いていない。 -->
-<div class="ui container">
+<title>Stylist status | Stylatte</title>
 
-    <div class="introduction">
-      <%= link_to image_tag("stylatte_logo_7.png", alt: "STYLATTE"), root_path %>
-      <h1 class="ui header">
-        <span class="library">
-          STYLATTE
-        </span>
-        <span class="tagline">
-          Your idea may help someone.
-        </span>
-      </h1>
-      <div class="ui hidden divider"></div>
+<!-- Folder; static_pages, File; home.en.html.erb -->
 
-      <a href="/introduction/getting-started.html" class="ui huge inverted download button">
-        Get Started
-      </a>
+<!--............Copyright.................
+Copyright 2016, Stylatte.
+.....................-->
 
-      <a href="/introduction/new.html" class="ui huge inverted basic button">New in 2.2 - June 2016</a>
+<!--*******SUMARRY OF THIS FILE***************
+* Header
 
-    </div>
+* Login
+  [1] Before Login
+  [2] After Login (to Edit Profile action)
+  [3]After Login and alreadt stylist. (update stylist status action)
 
-    <div class="advertisement">
-      <div id="carbonads-container">
-        <div class="carbonad">
-          <div id="azcarbon"></div>
-          <script type="text/javascript">var z = document.createElement("script"); z.type = "text/javascript"; z.async = true; z.src = "http://engine.carbonads.com/z/51619/azcarbon_2_1_0_VERTDARK"; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(z, s);</script>
+* FAQ
+
+* Contact us
+**************************-->
+
+<!--** Header ** -->
+  <div class="ui stackable very relaxed center aligned grid container">
+      <div class="column">
+        <h1 class="ui header">Your idea may help someone.</h1>
+        <p>STEPS FOR STYLINGYou need to make account first, and go to edit profile page, and check stylist.</p>
+      </div>
+  </div>
+
+
+<!-- ** Login ** -->
+
+<!--[1] Before Login (to Login action) -->
+<% unless logged_in? %>
+  <!-- steps -->
+  <h2>Steps for styling</h2>
+  <div class="ui center aligned container">
+        <div class="ui ordered steps">
+          <div class="link step">
+            <i class="yellow user icon"></i>
+            <div class="content">
+              <div class="title">Make account</div>
+              <div class="description">check "stylist" on Edit page.</div>
+            </div>
+          </div>
+          <div class="step">
+            <i class="users icon"></i>
+            <div class="content">
+              <div class="title">Find users</div>
+              <div class="description">who're waiting styling </div>
+            </div>
+          </div>
+          <div class="link step">
+            <i class="star icon"></i>
+            <div class="content">
+              <div class="title">Suppose</div>
+              <div class="description">styling and get stars.</div>
+            </div>
+          </div>
         </div>
+  </div>
+  <!-- button to action -->
+  <div class="ui two column center aligned divided very relaxed stackable grid container">
+    <div class="row">
+      <div class="column">
+        <h2 class="ui icon header">
+          Let's become a stylist!
+        </h2>
+        <p>Semantic is <b>designed completely with em</b>tablet and mobile.</p>
+      </div>
+
+      <div class="column">
+        <button class="ui green basic button"><%= link_to "Log in", login_path %></button>
       </div>
     </div>
-<p>Free, you can get advices from cool friends all over world.</p>
+  </div>
+  <!-- Easy Explanation -->
+  <div class="ui basic segment">
+    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+  </div>
+<% end %>
 
-</div>
+<!-- [2]After Login (to Edit Profile action) -->
+<% if logged_in? %>
+
+<% end %>
+
+<!-- [3]After Login and alreadt stylist. (update stylist status action) -->
+<% if logged_in? && current_user.stylist? %>
+
+<% end %>
 
 
 
+<!--**  FAQ ** -->
+  <h2>FAQ</h2>
+    <h5 class="ui top attached header">
+      Dogs
+    </h5>
+  <div class="ui attached segment">
+    <p>Dogs are one type of animal</p>
+  </div>
+
+    <h5 class="ui attached header">
+      Cats
+    </h5>
+  <div class="ui attached segment">
+    <p>Cats are thought of as being related to dogs, but only humans think this.</p>
+  </div>
+
+    <h5 class="ui attached header">
+      Lions
+    </h5>
+  <div class="ui attached segment">
+    <p>Humans don't think of lions as being like cats, but they are.</p>
+  </div>
+
+  <div class="ui bottom attached warning message">
+    <i class="warning icon"></i>
+    You've reached the end of this content segment!
+  </div>
+
+
+<!--** Contact us **-->
+<h2>Need more info? contact us.</h2>
+<p>There is the way for company to promote your own brands items!</p>
 
 
 
+<!-- +......NOTE.....+
 
-<!-- プライスリスト -->
-<!-- デスクトップにダウンロード済みのFreeのテーブルから（http://wegraphics.net/downloads/free-responsive-pricing-table/） -->
+pricelist (from http://wegraphics.net/downloads/free-responsive-pricing-table/)
 
 <section id="pricePlans">
 		<ul id="plans">
@@ -94,67 +183,10 @@
 					<li class="button"><a href="#">Purchase</a></li>
 				</ul>
 			</li>
-		</ul> <!-- End ul#plans -->
-		<div id="credits">by <a href="http://wegraphics.net/">WeGraphics</a></div>
+		</ul>
+    <div id="credits">by <a href="http://wegraphics.net/">WeGraphics</a></div>
 	</section>
 
-<!-- スタイリストサインイン 選んだコースによって、（上のボタンで）出てくるフォームがかわる。）-->
-<h2>Become a stylist! or Upgrade a stylist status!</h2>
-<div class="container-fluid">
-
-  ログイン済みのユーザーなら、Edit　profileが出てくる。
-  ・You hava already account and use it?
-  <!-- ステップ -->
-            <div class="ui four steps">
-              <div class="ui active step">
-                Sign up
-              </div>
-              <div class="ui active step">
-                Check "Stylist"
-              </div>
-              <div class="ui disabled step">
-                Confirm Order
-              </div>
-              <div class="ui disabled step">
-                Complete
-              </div>
-            </div>
-
-  ログイン前のユーザーならログインフォーム(Signup)が出てくる。
-  ・You need to make account first, and go to edit profile page, and check stylist.
-
-  <!-- ステップ -->
-            <div class="ui four steps">
-              <div class="ui disabled step">
-                Sign up
-              </div>
-              <div class="ui disabled step">
-                Check "Stylist"
-              </div>
-              <div class="ui disabled step">
-                Confirm Order
-              </div>
-              <div class="ui disabled step">
-                Complete
-              </div>
-            </div>
-  </div>
 
 
-<!-- よくある質問コーナー -->
-<h2>FAQ</h2>
-<div class="ui top attached segment">
-  <p>This segment is on top</p>
-</div>
-<div class="ui attached segment">
-  <p>This segment is attached on both sides</p>
-</div>
-<div class="ui bottom attached segment">
-  <p>This segment is on bottom</p>
-</div>
-
-
-
-
-<h2>Need more info? contact us.</h2>
-  <p>There is the way for company to promote your own brands items!</p>
++...........+-->
