--- a/app/views/static_pages/home.en.html.erb
+++ b/app/views/static_pages/home.en.html.erb
@@ -77,6 +77,7 @@ Rendering to
 
 <!-- Top Message -->
 <div class="ui vertical stripe intro segment">
+
   <div class="ui stackable very relaxed center aligned grid container">
       <div class="twelve wide column">
         <img alt="Stylatte" src="/assets/stylatte_logo_7.png" >
@@ -84,12 +85,47 @@ Rendering to
         <p>- For free -<%= link_to "Need Help?", help_path %></p>
       </div>
   </div>
-  <div class="custom_wrap_for_custom_button">
-    <button class="custom_button_1">
-      <%= link_to "Log in", login_path %>
-    </button>
+
+  <div class="ui stackable very relaxed center aligned grid container">
+
+    <!-- Form 1.~3.-->
+    <div class="ui equal width form">
+        <div class="fields">
+          <%= form_for(:session, url: login_path) do |f| %>
+
+    <!-- 1.Email -->
+              <div class="field">
+                <label>E-mail</label>
+                <%= f.email_field :email, class: 'form-control', placeholder: "joe@schmoe.com"  %>
+              </div>
+    <!-- 2.Password -->
+              <div class="field">
+                <label>Password</label>
+                <%= f.password_field :password, class: 'form-control' %>
+                <%= link_to "forgot password?", new_password_reset_path %>
+              </div>
+                <button class="custom_button_1">
+                  <%= link_to "Log in", login_path %>
+                </button>
+              <div class="ui divider"></div>
+    <!-- 3.Remember me-->
+              <div class="field">
+                <%= f.label :remember_me do %>
+                <%= f.check_box :remember_me %>
+                <span>Remember me on this computer</span>
+                <% end %>
+              </div>
+
+        <% end %>
+      </div>
+    </div>
+    <!-- End of Form 1.~3.-->
+
   </div>
+
 </div>
+
+
 
 <!-- New Post list -->
 <div class="ui vertical stripe intro segment">
