コメントいろいろ足した。

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -109,3 +109,18 @@
         <li><a href="">リンク</a></li>
     </ul>
 </div>
+
+
+<!-- +......NOTE.....+
+
+# 文入れる
+
++その他
++ユーザー名は公開される？
++ユーザー分けたければ・・・A. 自分でもう一つ作ってもらう。
++コメントは、時代とともに変わっていくから、１年でデータ削除されるようにする。もし必要なら、通知をして、長期保存にしたければ、「Note」（スタイリスト側）か「お気に入り」（ユーザー側）に保存してもらうようにする。
++コメントは常に他のユーザーには見られないと書いておく。
++アップロードできる写真の形式とサイズは？
++privateかpublicの設定について
+
++...........+-->
