--- a/app/views/static_pages/home.en.html.erb
+++ b/app/views/static_pages/home.en.html.erb
@@ -50,17 +50,6 @@ Rendering to
 
 </div>
 
-<!-- 広告欄  -->
-<!-- <div class="ui banner ad">
-<ins class="adsbygoogle"
-style="display:inline-block;width:468px;height:60px"
-data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
-data-ad-slot="XXXXXXXXXXXXXXXX"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div> -->
-
 
 
 
@@ -154,4 +143,47 @@ Rendering to
 
 <!-- +......NOTE.....+
 
+#サインアップの画面の文入れる(Twitter参考）
+
+By signing up, you agree to the Terms of Service and Privacy Policy, including Cookie Use. Others will be able to find you by email  when provided.
+Advanced options
+
+アカウントを作成すると、利用規約、およびCookieの使用を含むプライバシーポリシーに同意したことになります。あなたのメールアドレスや電話番号を連絡先に保存しているTwitterユーザーに通知などが表示されます。
+詳細設定オプション（プライバシー設定）
+
+ーーーーーーーーーーーーーーーーー
+# タイムライン案
+
+-フィードをつくる（スタイリスト、ただのユーザー、まだユーザーになっていない人のランディングページ別に。）スタイリングおねがいした側のUserの画面には、自分のPostsと返信=Post=Stylingがタイムラインで流れてくるようにする。
+ユーザーの場合。
+自分のポスト、
+それに対するコメント、
+フォローしているスタイリスト人の公開ポスト(スタイリング)
+スタイリストの場合。
+フォローしているユーザー人のポスト
+自分のコメントはいらない。自分のコメントは、スタイリングブックとして一覧でみれる。これは、公開してたら、ユーザーもみれる。
+ユーザーでもありスタイリストでもある人。
+自分のポスト、
+それに対するコメント⬅️
+自分のコメント⬅️
+コメントしてあげたポスト。
+星がどれに作るか、でテーブルがきまる
+ユーザー何パターンか作って、example以外に、その人がほしいだろうビュー設計やるとわかるはず。
+自分のポスト一覧は、スタイルブックとして、プロフィールがわりにみてもらえる。
+
+ーーーーーーーーーーーーーーーーーー
+広告入れる。
+
+広告掲載。Google Adsense ; https://www.google.com/adsense/createaccount?hl=jp&sourceid=aso&subid=jp-ww-et-nelson_adshp_bt&gsessionid=JeAWF4V-4RbgbzZw5SYqTl0P7K0Wkqo2&pli=1#content
+
+Semantic UIより（サイズいろいろあり）
+<div class="ui banner ad">
+<ins class="adsbygoogle"
+style="display:inline-block;width:468px;height:60px"
+data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
+data-ad-slot="XXXXXXXXXXXXXXXX"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 +...........+-->
