Design Changed(static pagesを日本語化など諸々）（about, contact, help, policy, stylistanalysis, styliststart, termsページ)

--- a/app/views/static_pages/about.en.html.erb
+++ b/app/views/static_pages/about.en.html.erb
@@ -149,3 +149,64 @@ Prior to founding Instagram, Kevin was part of the startup Odeo, which later bec
 <div class="ui inverted link list">
   <button class="ui red basic button"><%= link_to "Admin", admin_path %></button>
 </div>
+
+
+<!-- +......NOTE.....+
+プレスセンター
+
+当店をご訪問いただき誠にありがとうございます。
+当店ではプレスセンターを設けて、マスコミ関係各社様からのお問い合わせやご要望にいつでも対応させていただいております。
+
+プレスセンターのご案内
+
+株式会社クラシコム （北欧、暮らしの道具店の運営会社）
+
+プレス対応担当　　　　：筒井（ツツイ）
+お電話でのお問い合わせ：042-577-0486
+メールでのお問い合わせ：press@kurashicom.jp
+
+ご要望はどのようなものでしょうか？
+
+以下から該当するものをお探し下さい。
+（もし以下に含まれない場合は、別途お問い合わせ下さい）
+
+Q:雑誌や書籍等の製作に使用するスタイリングのための商品貸し出しについて
+
+A: 当店の都合により、現在は、商品のお貸し出しを一旦休止している状況にございます。
+（2013年10月より）
+
+Q:「北欧、暮らしの道具店」やクラシコムという会社について取材したい
+
+A: 私達のお店や会社に興味をもっていただき、とても嬉しく思います。
+媒体や特集内容、また掲載のスタイルによっては検討をさせていただく場合がございますが、
+まずは、お電話やメールにてお気軽にお問い合わせ下さい。
+
+Q:講演依頼について
+
+A: 大変ありがたいお申し出に、感謝いたします。
+担当者の状況や当店のスケジュールによっては検討をさせていただく場合がございますが、
+まずは、お電話やメールにてお気軽にお問い合わせ下さい。
+
+Q:過去のメディア掲載履歴について知りたい
+
+A: 過去のメディア掲載履歴については、以下のリンクからご覧いただけます。
+メディア掲載履歴
+
+お問い合わせーーーーーーーーーーーーーーーーーーーーーー
+■お問い合わせについて
+
+以下によくあるご質問と回答内容の一覧を
+ご用意しております！
+
+もしかするとお客様のお尋ねになりたいことが、
+その中に含まれているかもしれませんので、
+当店までお問い合わせいただく前に
+一度、青いボタンの下にある
+「よくあるお問い合わせ Q&A」
+の各項目をご覧いただくことを
+お勧めいたします。
+
+もし、それでも解決しない場合は
+お気軽にお問い合わせください。
+できるかぎり迅速に回答させていただきます。
++...........+-->
