--- a/app/views/static_pages/help.en.html.erb
+++ b/app/views/static_pages/help.en.html.erb
@@ -1,3 +1,19 @@
+<title>FAQ | Stylatte</title>　　
+
+<!-- Folder; static_pages, File; home.en.html.erb -->　
+
+<!--............Copyright.................　　
+Copyright 2016, Stylatte.
+.....................-->
+
+<!--*******SUMARRY OF THIS FILE***************
+
+[1]
+[2]
+
+**************************-->
+
+
 <h1>FAQ</h1>
 <!-- Introduce steps -->
 <div class="ui vertical stripe intro segment">
@@ -122,5 +138,9 @@
 +コメントは常に他のユーザーには見られないと書いておく。
 +アップロードできる写真の形式とサイズは？
 +privateかpublicの設定について
+
+＜参考＞
+キナリノ（キナリノのキュレーターがStylatteのスタイリストににている。）
+BRAND NOTE
 
 +...........+-->
