Design Changed(help, policy, termsページ)

--- a/app/views/static_pages/help.en.html.erb
+++ b/app/views/static_pages/help.en.html.erb
@@ -1,6 +1,6 @@
 <title>FAQ | Stylatte</title>　　
 
-<!-- Folder; static_pages, File; home.en.html.erb -->　
+<!-- Folder; static_pages, File; help.en.html.erb -->　
 
 <!--............Copyright.................　　
 Copyright 2016, Stylatte.
@@ -129,18 +129,14 @@ Copyright 2016, Stylatte.
 
 <!-- +......NOTE.....+
 
-# 文入れる
 
-+その他
+
+
 +ユーザー名は公開される？
 +ユーザー分けたければ・・・A. 自分でもう一つ作ってもらう。
 +コメントは、時代とともに変わっていくから、１年でデータ削除されるようにする。もし必要なら、通知をして、長期保存にしたければ、「Note」（スタイリスト側）か「お気に入り」（ユーザー側）に保存してもらうようにする。
 +コメントは常に他のユーザーには見られないと書いておく。
 +アップロードできる写真の形式とサイズは？
 +privateかpublicの設定について
-
-＜参考＞
-キナリノ（キナリノのキュレーターがStylatteのスタイリストににている。）
-BRAND NOTE
 
 +...........+-->
