--- a/app/views/static_pages/help.ja.html.erb
+++ b/app/views/static_pages/help.ja.html.erb
@@ -1,6 +1,6 @@
 <title>よくある質問 | Stylatte</title>　　
 
-<!-- Folder; static_pages, File; home.en.html.erb -->　
+<!-- Folder; static_pages, File; help.ja.html.erb -->　
 
 <!--............Copyright.................　　
 Copyright 2016, Stylatte.
@@ -12,159 +12,3 @@ Copyright 2016, Stylatte.
 [2]
 
 **************************-->
-
-
-
-
-
-
-よくある質問
-
-キナリノについて
-
-キナリノとはどんなサイトですか？
-キナリノとは、「暮らしを素敵に丁寧に。」をコンセプトに、ファッションや雑貨、インテリアなどの暮らしに関する情報を集めて紹介するキュレーションメディアです。
-会員登録について
-
-会員登録すると何ができますか？
- 会員登録いただきますと、キナリノ内のまとめ記事のお気に入り登録ができます。
-雑誌をスクラップする感覚で自分のお気に入り記事を集めてみてください。 また、まとめ記事を投稿いただくにはキュレーター審査を通過いただく必要があります。
-会員登録後キュレーター申請を行ってください。
-会員登録のメールが届きません
-メールアドレスが間違っている可能性があります。もう一度メールアドレスをご確認ください。
-また、迷惑メールフィルターを設定されている場合は[ noreply@kinarino.jp ]を除外してください。
-新規登録しようとすると「メールアドレスはすでに使われています。」と出るため、パスワードの再設定手続きを行いましたが、
-しばらく経ってもメールが届きません
-SNS経由で登録している可能性が考えられます。各SNSログインからお試しください。
-ユーザーID、URL、ニックネームを変更したい
-ユーザーID、URLは一度設定したものから変更することはできません。
-ニックネームは随時変更可能ですので、プロフィールページより変更ください。
-パスワードを忘れてログインできません
-ログイン画面の「パスワードをお忘れの方」からパスワードの再設定手続きを行ってください。
-パスワードを変更したい
-マイページの「設定」から変更できます。
-パスワードの再設定手続きを行い、しばらく経ったがメールが届きません
-しばらく経ってもメールが届かない場合、以下の可能性が考えられます。
-・パスワードの不要なSNS経由の登録
-・メールアドレスの入力間違え
-・迷惑メールに分類されている
-・kinarino.jpからのメールが受信できない設定
-・キナリノ退会済み
-スマートフォンのFacebookやTwitterのタイムラインに流れてくるリンクからキナリノにアクセスすると、毎回ログインを求められるため、簡単にお気に入り出来ません
-大変申し訳ございませんが、ブラウザ（safariなど）でキナリノにログインされている場合も、SNSからアクセスするとログイン状態が解除されてしまいます。以下の手順でご覧いただくと、ログインされた状態でお楽しみいただけます。
-・iPhoneの場合
-　右上に表示される矢印アイコンをタップして「safariで開く」
-・Androidの場合
-　右上に表示される3点アイコンをタップして「ブラウザで開く」または「Chromeで開く」
-まとめ記事を投稿するには？
-まとめ記事はキュレーター審査に通過した方のみ投稿いただけます。
-会員登録後、キュレーター申請を行ってください。
-その他
-
-Androidのスマートフォンでキナリノをホーム画面に追加したい
-方法はご利用のブラウザによって異なります。以下に一般的な方法を記載します。
-
-・標準ブラウザ(Androidブラウザ)の場合
-
-まずはキナリノのお好みのページをブックマークに追加してください。その後、ブラウザのブックマーク一覧画面を開き、先ほど追加したキナリノのブックマークをロングタップ(タッチ長押し)してください。表示されたメニューの「ショートカットを作成」をタップすれば完了です。
-
-・Chromeの場合
-
-キナリノのお好みのページを開き、メニュー開いて、表示されたメニューの「ホーム画面に追加」をタップすれば完了です。
-記事で紹介されていた商品が欲しい。購入場所を教えて欲しい
-現在、商品や作品に関するご案内を行っておりません。ご了承ください。
-
-プレスリリースのご送付、情報提供
-
-新商品に関する情報をご提供いただける場合、またキナリノにて掲載を希望される場合には、下記連絡先までご送付ください。
-なお、ご送付いただいた情報に関しまして、掲載のお約束は出来かねます。予めご了承下さい。
-メール: press[at]kinarino.jp
-
-
-広告掲載についてーーーーーーーーーーーーーーーーーーー
-
-「BRAND NOTE」によってご提供できる価値
-
-身の回りにあるマスプロダクトに込められた想いやこだわりについて、なぜわたしたちはあまり認知していないのでしょうか。
-
-そこには
-「自社の商品やブランドの想いやこだわりについて企業サイドからは発信しづらい」
-「今の時代では企業からの一方向的なコミュニケーションが伝わりにくくなっている」
-という企業さまの課題がありました。
-
-そこで、わたしたちがお役に立てると思います。
-
-わたしたちの運営する「北欧、暮らしの道具店」には毎月約110万人の読者が来訪されており、ライフスタイル系のメディアとしては国内有数の規模となっています。
-
-そこに日々掲載されているコンテンツは、あくまでも「使い手」である自分たちが大事な友人に紹介するようなスタンスとして、統一された価値観や世界観のもと編集されているため、読者のみなさまよりたくさんのご支持を頂いてきました。
-
-そのような信頼関係を日々構築しているからこそ、当店が商品やブランドの第三者の語り手として企業さまの「伝えたい」情報を「伝わる」コンテンツにした時、読者の皆様に正面からしっかりと受け止めていただくことができています。
-
-商品のことを熟知された貴社のご担当者さまと、読者により近いところにいるわたしたちとで、「ほんとう」が「たのしく」伝わるコンテンツを企画しましょう。
-
-御社の商品やブランドに託されたメッセージを多くの人に届けるために、「北欧、暮らしの道具店」というメディアの発信力と、わたしたちスタッフがこれまでに培ってきたコンテンツ編集ノウハウをどうぞご活用ください。
-
-▶︎BRAND NOTEの取り組みについては以下の記事にて取り上げて頂いております。
-
-広告は、決して嫌われるものではない。「北欧、暮らしの道具店」×「一番搾り」コラボ成功のカギ
-
-読者が嫌いなのは“嘘と退屈”–「北欧、暮らしの道具店」の記事広告はどうして最後まで読まれるのか
-
-
-
-「北欧、暮らしの道具店」メディアデータ
-
-メディアデータは以下になります。　※2016年11月1日更新
-
-月間ページビュー：約1,300万ページビュー
-月間ユニークユーザー：約120万ユニークユーザー
-公式Facebookページ：40万7653いいね
-公式Instagramアカウント：47万1000フォロワー
-
-
-
-お問い合わせいただく前にご理解いただきたい3つのこと
-
-1.お取り組みをお断りすることがございます
-お問い合わせいただく企業様に、最初に申し上げておかなければならないことがあります。それは「BRAND NOTE」でのお取り組みをお断りすることがあるということです。
-
-上記したとおり、わたしたちはこれまで大事な友人に紹介するようなスタンスで、商品や読みものを読者のみなさまに提案してまいりました。ですから「BRAND NOTE」においても同じようなスタンスで取り組みたいと考えています。
-
-クライアントさまに対して「広く告げる」責任を負うと同時に、読者の皆さまに対して自分たちが本心からお勧めできるものだけをご紹介する責任を負っているということを重く受け止めています。そしてそういうスタンスでお引き受けしたお仕事こそが、クライアントさまにも最大限の効果をお返しできるものとなることを確信しています。
-
-※お取り組み不可と想定される商材の一例
-スキンケア商品
-美容に関するサービス
-健康食品やサプリメント
-不動産、住宅等
-各種ローンや金融商品
-各種通信販売
-その他公序良俗に反する商材
-
-2.掲載枠に限りがございます
-「BRAND NOTE」では、通常の編集コンテンツと同じまたはそれ以上の良質なコンテンツにすることで企業さまの情報が読者にしっかりと伝わると考えます。
-ですのでコンテンツ制作に工数がどうしてもかかってしまい、その結果、現状では1ヶ月につき2社様限定のお取り組みとさせて頂いております。
-
-3.短期的なコンバージョン指標やPV単価で効果を測るお取り組みには不向きであります
-「BRAND NOTE」は、共感性が高く気持ちのよいコミュニケーション体験を中長期的に積み重ねることでブランド価値を向上させるお取り組みになります。
-
-ですので、コンバージョンやPVを短期的かつ効率的に獲得していくためのお取り組みには不向きであることを先にお伝えさせていただきます。
-
-あくまでマーケティング施策における役割が違うということをご理解いただければと思います。
-
-以上がご理解いただきたい3つの内容になります。
-
-世界観を大事にすること、それを読者のみなさまと約束して守りつづけること、それこそが「北欧、暮らしの道具店」がメディアとして成長できた最大の要因であり、クライアントさまに最大の広告効果をお返しするための価値の源泉であると認識しております。
-
-わたしたちが提供するこのタイアッププログラムに参加したいとお考えの企業さまは、まずはお気軽にご相談いただければ幸いです。
-
-お問い合わせ先：
-株式会社クラシコム
-BRAND NOTE事業担当
-brandnote@kurashicom.jp
-
-
-
-「BRAND NOTE」の過去事例
-
-（各バナーからそれぞれのコンテンツ一覧ページに遷移いたします）
