--- a/app/views/static_pages/policy.ja.html.erb
+++ b/app/views/static_pages/policy.ja.html.erb
@@ -1,6 +1,6 @@
 <title>Privacy Policy | Stylatte</title>　　
 
-<!-- Folder; static_pages, File; home.en.html.erb -->　
+<!-- Folder; static_pages, File; policy.ja.html.erb -->　
 
 <!--............Copyright.................　　
 Copyright 2016, Stylatte.
