Design Changed; titleを変えた。（titleの指定がないものは、アプリ名になるように設定）

--- a/app/views/posts/show.en.html.erb
+++ b/app/views/posts/show.en.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "MyPostDetail") %>
 <!-- 選択したPost内容 -->
 <h3>This post is created by <%= link_to @post.user.name, @post.user %> </h3>
     <div class="ui card">
