--- a/app/views/static_pages/policy.en.html.erb
+++ b/app/views/static_pages/policy.en.html.erb
@@ -1,4 +1,4 @@
-<title>Privacy Policy | Stylatte</title>　　
+<% provide(:title, "Privacy Policy") %>　　
 
 <!-- Folder; static_pages, File; policy.en.html.erb -->　
 
