--- a/app/views/static_pages/terms.en.html.erb
+++ b/app/views/static_pages/terms.en.html.erb
@@ -1,5 +1,4 @@
-<title>Terms of Service | Stylatte</title>　　
-
+<% provide(:title, "Terms") %>
 <!-- Folder; static_pages, File; terms.en.html.erb -->　
 
 <!--............Copyright.................　　
