--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
     See the License for the specific language governing permissions and
     limitations under the License. -->
 <!-- title and more -->
+    <title><%= full_title(yield(:title)) %></title>
     <meta charset="utf-8">
     <meta name="description" content="Styling from all over the world! New fashion and New myself! 自分に合うスタイリストがみつかる。世界中から、似合うものを提案してもらおう。">
     <meta name="keywords" content=",Stylatte,stylist,スタイリスト,styling,スタイリング,コーディネート,インフルエンサー">
