--- a/app/views/static_pages/styliststart.en.html.erb
+++ b/app/views/static_pages/styliststart.en.html.erb
@@ -1,5 +1,4 @@
-<title>Stylist status | Stylatte</title>
-
+<% provide(:title, "Stylist status") %>
 <!-- Folder; static_pages, File; home.en.html.erb -->
 
 <!--............Copyright.................
