--- a/app/views/static_pages/home.en.html.erb
+++ b/app/views/static_pages/home.en.html.erb
@@ -68,8 +68,8 @@ Rendering to
 <div class="ui vertical stripe intro segment">
 
   <div class="ui stackable very relaxed center aligned grid container">
+    <img alt="Stylatte" src="/assets/will_you_meet.png" >
       <div class="twelve wide column">
-        <img alt="Stylatte" src="/assets/stylatte_logo_7.png" >
         <h1 class="ui header">Get all the best stylings from all over the world. </h1>
         <p>- For free -<%= link_to "Need Help?", help_path %></p>
       </div>
