--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -49,7 +49,7 @@ http://photoshopvip.net/91115のButton Shadowを参考に作ったボタン
 scomment_form
 *******************************/
 .bb{
-  background: #9cda5e;
+  background: rgba(#9cda5e, 0.42);
   margin-top: 40px;
   margin-right: 0px;
   margin-bottom: 20px;
@@ -61,7 +61,7 @@ scomment_form
 post_form
 *******************************/
 .dd{
-  background: #136aec;
+  background: rgba(#136aec, 0.2);
   margin-top: 40px;
   margin-right: 0px;
   margin-bottom: 20px;
