--- a/app/views/static_pages/about.en.html.erb
+++ b/app/views/static_pages/about.en.html.erb
@@ -1,19 +1,25 @@
 <title id="pageTitle">About | STYLATTE</title>
 
 <!-- 企業理念 -->
-<h4 class="ui horizontal divider header">
-  Identity
-</h4>
-
-<div class="header">
-
-<div class="ui segment">
-  <h4 class="ui header">A header</h4>
-  <p>Te eum doming eirmod, nominati pertinacia argumentum ad his. Ex eam alia facete scriptorem, est autem aliquip detraxit at. Usu ocurreret referrentur at, cu epicurei appellantur vix. Cum ea laoreet recteque electram, eos choro alterum definiebas in. Vim dolorum definiebas an. Mei ex natum rebum iisque.</p>
-   <p>Audiam quaerendum eu sea, pro omittam definiebas ex. Te est latine definitiones. Quot wisi nulla ex duo. Vis sint solet expetenda ne, his te phaedrum referrentur consectetuer. Id vix fabulas oporteat, ei quo vide phaedrum, vim vivendum maiestatis in.</p>
-   <p>Eu quo homero blandit intellegebat. Incorrupte consequuntur mei id. Mei ut facer dolores adolescens, no illum aperiri quo, usu odio brute at. Qui te porro electram, ea dico facete utroque quo. Populo quodsi te eam, wisi everti eos ex, eum elitr altera utamur at. Quodsi convenire mnesarchum eu per, quas minimum postulant per id.</p>
-</div>
-
+<div class="ui grid">
+  <div class="two column row">
+    <div class="column"><%= link_to image_tag("stylatte_50.png", alt: "STYLATTE"), root_path %></div>
+    <div class="column"><h4 class="ui header">Our identity</h4>
+    <p>Te eum doming eirmod, nominati pertinacia argumentum ad his. Ex eam alia facete scriptorem, est autem aliquip detraxit at. Usu ocurreret referrentur at, cu epicurei appellantur vix. Cum ea laoreet recteque electram, eos choro alterum definiebas in. Vim dolorum definiebas an. Mei ex natum rebum iisque.</p>
+     <p>Audiam quaerendum eu sea, pro omittam definiebas ex. Te est latine definitiones. Quot wisi nulla ex duo. Vis sint solet expetenda ne, his te phaedrum referrentur consectetuer. Id vix fabulas oporteat, ei quo vide phaedrum, vim vivendum maiestatis in.</p>
+     <p>Eu quo homero blandit intellegebat. Incorrupte consequuntur mei id. Mei ut facer dolores adolescens, no illum aperiri quo, usu odio brute at. Qui te porro electram, ea dico facete utroque quo. Populo quodsi te eam, wisi everti eos ex, eum elitr altera utamur at. Quodsi convenire mnesarchum eu per, quas minimum postulant per id.</p>
+    </div>
+  </div>
+  <div class="eight column row">
+    <div class="column"></div>
+    <div class="column"></div>
+    <div class="column"></div>
+    <div class="column"></div>
+    <div class="column"></div>
+    <div class="column"></div>
+    <div class="column"></div>
+    <div class="column"></div>
+  </div>
 </div>
 
 <!-- プロフィール -->
@@ -26,14 +32,14 @@
 <table class="ui definition table">
   <tbody>
     <tr>
-      <td class="two wide column">Name</td>
-      <td>Liebery</td>
+      <td class="two wide column">Company Name</td>
+      <td>Stylatte, LLC</td>
     </tr>
     <tr>
       <td>Office</td>
       <td>
         <div class="item">
-          <i class="marker icon"></i>Wakayama, Japan
+          <i class="marker icon"></i>1063 Kimiidera Wakayama, Japan
         </div>
       </td>
     </tr>
@@ -52,7 +58,7 @@
   <div class="item">
     <i class="linkify icon"></i>
     <div class="content">
-      <a href="http://www.liebery.com">liebery.com</a>
+      <a href="http://www.stylatte.com/about">http://www.stylatte.com/about</a>
     </div>
   </div>
 </div>
@@ -62,7 +68,7 @@
       <td>Contact Us</td>
       <td>
         <div class="item">
-          <i class="mail icon"></i><a href="mailto:main@liebery.com">main@liebery.com</a>
+          <i class="mail icon"></i><a href="mailto:info@stylatte.com">info@stylatte.com</a>
         </div>
       </td>
     </tr>
@@ -70,9 +76,26 @@
 </table>
 
 <!-- この画像の１行をリスポンシブにすること。 -->
-<div class="iframe-wrapper">
-  <iframe width="560" height="315" src="https://docs.google.com/spreadsheets/d/1RwdsHfO99no-umGdbZnkqlN-Qp1YdWfQuzoJrJaDe44/pubchart?oid=270929335&amp;format=image" frameborder="0" class="iframe"></iframe>
+<div class="ui grid">
+  <div class="three column row">
+    <div class="column"></div>
+    <div class="iframe-wrapper">
+      <iframe width="560" height="315" src="https://docs.google.com/spreadsheets/d/1RwdsHfO99no-umGdbZnkqlN-Qp1YdWfQuzoJrJaDe44/pubchart?oid=270929335&amp;format=image" frameborder="0" class="iframe"></iframe>
+    </div>
+    <div class="column"></div>
+  </div>
+  <div class="eight column row">
+    <div class="column">Wakayama Office: </div>
+    <div class="column"></div>
+    <div class="column"></div>
+    <div class="column"></div>
+    <div class="column"></div>
+    <div class="column"></div>
+    <div class="column"></div>
+    <div class="column"></div>
+  </div>
 </div>
+
 
 
 
@@ -87,12 +110,12 @@
   <div class="item">
     <img class="ui avatar image" src="face5.jpg">
     <div class="content">
-      <div class="header">Nanami Maeda</div>
-      Founder
+      <div class="header">Yoshie Maeda</div>
+      Founder, CEO
     </div>
   </div>
 </div>
-<p>Kevin Systrom (@kevin) is the CEO and co-founder of Instagram, a community of more than 500 million who capture and share the world's moments on the service. He is responsible for the company's overall vision and strategy as well as day-to-day operations.Since the beginning, Kevin has focused on simplicity and inspiring creativity through solving problems with thoughtful product design. As a result, Instagram has become the home for visual storytelling for everyone from celebrities, newsrooms and brands, to teens, musicians and anyone with a creative passion.
+<p>Yoshie Maeda (@kevin) is the CEO and founder of Stylatte, a community of more than 500 million who capture and share the world's moments on the service. He is responsible for the company's overall vision and strategy as well as day-to-day operations.Since the beginning, Kevin has focused on simplicity and inspiring creativity through solving problems with thoughtful product design. As a result, Instagram has become the home for visual storytelling for everyone from celebrities, newsrooms and brands, to teens, musicians and anyone with a creative passion.
 
 Prior to founding Instagram, Kevin was part of the startup Odeo, which later became Twitter, and spent two years at Google working on products like Gmail and Google Reader. He graduated from Stanford University with a BS in Management Science and Engineering and serves on the boards of Walmart and KCRW.</p>
 
@@ -106,13 +129,16 @@ Prior to founding Instagram, Kevin was part of the startup Odeo, which later bec
   </div>
 </div>
 
-<!-- 求人画像ここに貼る We are hiring-->
-
-<!-- 事業一覧 -->
+<!-- We are hiring-->
 <h4 class="ui horizontal divider header">
-  事業一覧
 </h4>
-<%= link_to image_tag("stylatte_50.png", alt: "STYLATTE"), root_path %>
+<div class="ui grid">
+  <div class="three column row">
+    <div class="column">+81 (0)50 3748 2254<br>hr@stylatte.com<br>(Yoshie Maeda)</div>
+    <div class="column"><%= link_to image_tag("Job_tickets.png", alt: "JobTickets"), root_path %></div>
+    <div class="column"></div>
+  </div>
+</div>
 
 
 <!-- ニュース -->
@@ -120,23 +146,35 @@ Prior to founding Instagram, Kevin was part of the startup Odeo, which later bec
   News
 </h4>
 
-<p>Doggie treats are good for all times of the year. Proven to be eaten by 99.9% of all dogs worldwide.</p>
+Our News are on
+<i class="facebook blue icon"></i><a href="https://www.facebook.com/Stylatte-335151873516229/" target="_blank">Facebook</a>
+<i class="twitter blue icon"></i><a href="https://twitter.com/stylatte2016" target="_blank">Twitter</a><br>
+
+</table>
 
 <!-- プレス記録とプレスの方向け案内 -->
 <h4 class="ui horizontal divider header">
   Press
 </h4>
+<div class="ui grid">
+  <div class="three column row">
+    <div class="column">+81 (0)50 3748 2254<br>press@stylatte.com<br>(Yoshie Maeda)</div>
+    <div class="column"></div>
+    <div class="column"></div>
+  </div>
+</div>
 
-
-
-<p>STYLATTE is used and loved by millions of people around the globe.</p>
 
 <!-- 投資家向け案内 -->
 <h4 class="ui horizontal divider header">
   Investment
 </h4>
-
-<p>STYLATTE is used and loved by millions of people around the globe.</p>
+<div class="three column row">
+  <div class="column">+81 (0)50 3748 2254<br>investor@stylatte.com<br>(Yoshie Maeda)</div>
+  <div class="column"></div>
+  <div class="column"></div>
+</div>
+<p>Our company's annual reports are <a href="https://www.facebook.com/Stylatte-335151873516229/" target="_blank">HERE</a>.</p>
 
 
 
