--- a/app/views/static_pages/about.en.html.erb
+++ b/app/views/static_pages/about.en.html.erb
@@ -1,6 +1,7 @@
 <title id="pageTitle">About | STYLATTE</title>
 
 <!-- 企業理念 -->
+<h1>Thank you for visiting our site! We are trying to make good services which make a lot of people feel happy.</h1>
 <div class="ui grid">
   <div class="two column row">
     <div class="column"><%= link_to image_tag("stylatte_50.png", alt: "STYLATTE"), root_path %></div>
