--- a/app/views/static_pages/terms.en.html.erb
+++ b/app/views/static_pages/terms.en.html.erb
@@ -11,3 +11,4 @@ Copyright 2016, Stylatte.
 [2]
 
 **************************-->
+<h1>For Free, you can get advices from cool friends all over world.</h1>
